# nano-rl

./: README.md  dataset.py  lint.sh  pyproject.toml  reward.py  test.sh  test_reward.py  train.py  train_grpo.py  train_grpo_scramble.py
dapo/: README.md  test_train.py  train.py
data/: anagrams.parquet  dictionary.parquet  generate-anagram-dataset.py  generate-word-scramble-dataset.py
grpo/: README.md  test_environment.py  test_train.py  train.py
reinforce/: README.md  environment.py  test_train.py  train.py
src/nano_rl/dapo/: README.md  train.py
src/nano_rl/environment/: __init__.py  digit.py  environment.py
src/nano_rl/grpo/: README.md  train.py
src/nano_rl/reinforce/: README.md  train.py
tests/: conftest.py  digit_environment.py  inference.py  test_dapo.py  test_digit_environment.py  test_grpo.py  test_reinforce.py
