[project]
name = "nano-rl"
version = "0.1.0"
description = "Minimal implementations of RL algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict = "True"
# transformers is missing type hints in places; disabling this error for my sanity
disable_error_code = ["no-untyped-call"]
